
  [ Joey Hess ]
  * Document how to preseed partman-auto to use only available disk, no matter
    what it's name is.
  * debian/rules: call dh_md5sums.
  * Document debian-installer/exit/halt preseed.

  [ Colin Watson ]
  * Clarify that you need to actually provide an autopartitioning method as
    well as preseeding the partman confirmation messages.

  [ Frans Pop ]
  * Make copyright refer explicitly to GPL version 2 as that is the version we
    include in the appendix; add reference to /usr/share/common-licenses to
    make Lintian happy.

 -- Frans Pop <fjp@debian.org>  Sun, 23 Dec 2007 07:53:56 +0100

installation-guide (20070319) unstable; urgency=low

  [ Frans Pop ]
  * Cleaned up definitions of some entities and removed unused ones.
  * Implement infrastructure that allows entities to be translated.
    Thanks to Miroslav Kure for providing the patch. Closes: #344048, #406515.
  * Disable Korean PDF/PS formats for builds for the website.
  * appendix/files: update information about mouse configuration, based on a
    patch from Peter Samuelson (for which thanks). Closes: #406290.
  * boot-installer, appendix/preseed: document preseed/interactive parameter.

  [ Joey Hess ]
  * Fix package name for installation-reports, and manual unfuzzy of all
    translations. Closes: #408408

  [ Frans Pop ]
  * welcome:
    - make links to FSF and GNU more consistent (closes: #410317)
    - we do not necessarily share the ideals of the FSF (closes: #410129)
    Thanks to Francesco Poli for suggesting these changes.
  * using-d-i: guided partitioning now creates swap inside LVM.
    Thanks to Francesco Poli. Closes: #411399.
  * Document installs over PPPoE. Based on a text proposed by Eddy Petrisor.
    Closes: #408340.
  * installation-howto: update for the integration of base-config into D-I.
  * appendix/preseed:
    - as exim no longer asks any questions during installations, there is no
      real need to document it anymore