@@ -1,4 +1,4 @@
-Document: installation-guide-%ARCH%-%LANG%
+Document: installation-guide-%ARCH%-%LANG_ID%
 Title: Debian Installation Guide for %ARCH_FULL% in %LANG_FULL%
 Author: Debian Installer team
 Abstract: Manual describing how to install a Debian system
