@@ -3,7 +3,7 @@ Section: doc
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Frans Pop <fjp@debian.org>
-Standards-Version: 3.6.2
+Standards-Version: 3.7.3
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/manual
 Build-Depends: debhelper (>= 4), docbook, docbook-xml, docbook-xsl, xsltproc, gawk, libhtml-parser-perl, w3m, poxml, jadetex, openjade | openjade1.3, docbook-dsssl, gs-common, texlive-lang-cyrillic, texlive-lang-czechslovak, texlive-lang-finnish, texlive-lang-french, texlive-lang-german, texlive-lang-italian, texlive-lang-other, texlive-lang-portuguese, texlive-lang-spanish, texlive-lang-swedish, texlive-lang-vietnamese, latex-hangul-ucs-hlatex, cm-super
 # This comment can also be used to generate a Build-Depends line, by
