@@ -57,11 +57,18 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
     well as preseeding the partman confirmation messages.
 
   [ Frans Pop ]
-  * Make copyright refer explicitly to GPL version 2 as that is the version we
-    include in the appendix; add reference to /usr/share/common-licenses to
+  * Make copyright refer explicitly to GPL version 2 as that is the version 
+    included in the appendix; add reference to /usr/share/common-licenses to
     make Lintian happy.
+  * Rename doc-base.TEMPLATE to TEMPLATE.doc-base to avoid its inclusion in
+    the package for the first architecture.
+  * Modify language codes that include a country for the doc-base document ID
+    so they only contain valid characters.
+  * Remove the PDF section in doc-base files if PDF format is not built for a
+    language.
+  * Update standards version to 3.7.3; no changes needed.
 
- -- Frans Pop <fjp@debian.org>  Sun, 23 Dec 2007 07:53:56 +0100
+ -- Frans Pop <fjp@debian.org>  Sun, 23 Dec 2007 08:34:09 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
